force-app/main/default/objects/Gift_Allocation__c/Gift_Allocation__c.object-meta.xml
<CustomObject>
    <description>Junction linking an Opportunity (gift) to a donor's Annual Giving Summary, carrying the credited Amount and a Credit Type (Hard or Soft). Master-detail to the Annual Giving Summary so hard/soft totals roll up to the correct fiscal-year record — no fiscal-year date math needed. JSI-90 Moves Management. Author: Jason Ott.</description>
    <label>Gift Allocation</label>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>Gift Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>