force-app/main/default/objects/Gift_Allocation__c/fields/Allocation_Key__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Key__c</fullName>
    <description>Backstop against crediting the same gift to the same donor twice = Opportunity Id + '|' + Contact Id + '|' + Credit Type. Unique, case-insensitive. Stamped by the allocation automation / a before-save flow. JSI-90 / Jason Ott.</description>
    <externalId>true</externalId>
    <label>Allocation Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>