force-app/main/default/objects/Gift_Allocation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Credited amount for this allocation (hard = the donor's share of the gift Amount; soft = the soft-credit amount). Rolled up to the summary's hard/soft totals. JSI-90 / Jason Ott.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>