force-app/main/default/objects/Gift_Allocation__c/fields/Annual_Giving_Summary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Giving_Summary__c</fullName>
    <description>The donor's fiscal-year summary this allocation credits. Master-detail so hard/soft totals roll up to the correct year. JSI-90 / Jason Ott.</description>
    <label>Annual Giving Summary</label>
    <referenceTo>Annual_Giving_Summary__c</referenceTo>
    <relationshipLabel>Gift Allocations</relationshipLabel>
    <relationshipName>Gift_Allocations</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>