force-app/main/default/objects/Gift_Allocation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The donor credited by this allocation (matches the Annual Giving Summary's contact). Restrict delete to protect giving history. JSI-90 / Jason Ott.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Allocations</relationshipLabel>
    <relationshipName>Gift_Allocations</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>