force-app/main/default/objects/Gift_Allocation__c/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <description>Whether this allocation is a Hard credit (the donor gave directly) or a Soft credit (influence/household/matched). Both accumulate on the summary; qualification uses the combined total. JSI-90 / Jason Ott.</description>
    <label>Credit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
                <default>true</default>
                <label>Hard</label>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>