force-app/main/default/objects/Gift_Allocation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The gift (Opportunity) being credited. Restrict delete so an Opportunity with allocations cannot be removed out from under the giving totals. JSI-90 / Jason Ott.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gift Allocations</relationshipLabel>
    <relationshipName>Gift_Allocations</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>