force-app/main/default/objects/Gift_Allocation__c/validationRules/Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Not_Negative</fullName>
    <active>true</active>
    <description>A credited amount cannot be negative. JSI-90 / Jason Ott.</description>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount cannot be negative.</errorMessage>
</ValidationRule>